--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" >
+    <meta name="format-detection" content="telephone=no" />
+    <title>充值</title>
+    <meta itemprop="name" id="shareTitle" content="充值"/>
+    <meta name="description" id="shareContent" itemprop="description" content="剧能玩充值" />
+    <link rel="shortcut icon" type="images/x-icon" href="http://qiniu.jnwtv.com/H520180822142151701436792.ico">
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
