管理员路由

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" >
     <meta name="format-detection" content="telephone=no" />
-    <title>充值</title>
-    <meta itemprop="name" id="shareTitle" content="充值"/>
-    <meta name="description" id="shareContent" itemprop="description" content="剧能玩充值" />
-    <link rel="shortcut icon" type="images/x-icon" href="http://qiniu.jnwtv.com/H520180822142151701436792.ico">
+    <title>四海味点餐</title>
+    <meta itemprop="name" id="shareTitle" content="四海味点餐"/>
+    <meta name="description" id="shareContent" itemprop="description" content="四海味点餐，点你喜欢" />
+    <link rel="shortcut icon" type="images/x-icon" href="/static/img/logo/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
