--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>四海味点餐</title>
     <meta itemprop="name" id="shareTitle" content="四海味点餐"/>
     <meta name="description" id="shareContent" itemprop="description" content="四海味点餐，点你喜欢" />
-    <link rel="shortcut icon" type="images/x-icon" href="/public/static/img/logo/favicon.ico">
+    <link rel="shortcut icon" type="images/x-icon" href="http://qiniu.jnwtv.com/H520190202154244125368762.ico">
   </head>
   <body>
     <div id="app"></div>
